# MPCHonestMajorityForSpdz

./: .gitignore  CMakeLists.txt  DNHonestMult.h  GRRHonestMult.h  LICENSE  Mersenne127.cpp  Mersenne127.h  Protocol.h  README.md  TemplateField.cpp  TemplateField.h  ZpMersenneLongElement.h  inputsFile.txt  main.cpp
